Added the logo image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 <body>
 
   <center class="wrapper">
-
     <table class="main" width="100%">
 
 <!-- TOP BORDER -->
@@ -49,8 +48,28 @@
         <td height="8" style="background-color: #171a1b;"></td>
     </tr>
 
-
 <!-- LOGO SECTION -->
+    <tr>
+        <td>
+            <table width="100%">
+
+                <tr>
+                    <td class="two-columns">
+
+                      <table class="column">
+                        <tr>
+                            <td>
+                                <a href="https://main--resilient-moonbeam-d97f1c.netlify.app/"><img src="img/modern.jpg"></a>
+                            </td>
+                        </tr>
+                      </table>
+
+                    </td>
+                </tr>
+   
+            </table>
+        </td>
+    </tr>
 
 
 <!-- BANNER IMAGE -->
