Added social media logo's

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
         font-family: sans-serif;
         color: #171a1b
     }
+    .two-columns {
+        text-align: center;
+        font-size: 0;
+    }
+    .two-columns .column {
+        width: 100%;
+        max-width: 300px;
+        display: inline-block;
+        vertical-align: top;
+    }
 
 </style>
 </head>
@@ -59,7 +69,21 @@
                       <table class="column">
                         <tr>
                             <td>
-                                <a href="https://main--resilient-moonbeam-d97f1c.netlify.app/"><img src="img/modern.jpg"></a>
+                                <a href="https://main--resilient-moonbeam-d97f1c.netlify.app/">
+                                    <img src="img/modern.jpg" alt="Modern Logo"
+                                    width="180" title="Modern Logo"></a>
+                            </td>
+                        </tr>
+                      </table>
+
+                      <table class="column">
+                        <tr>
+                            <td>
+                                <a href="#"><img src="img/black-facebook.png" alt="" width="30px"></a>
+                                <a href="#"><img src="img/black-twitter.png" alt="" width="30px"></a>
+                                <a href="#"><img src="img/black-youtube.png" alt="" width="30px"></a>
+                                <a href="#"><img src="img/black-linkedin.png" alt="" width="30px"></a>
+                                <a href="#"><img src="img/black-instagram.png" alt="" width="30px"></a>
                             </td>
                         </tr>
                       </table>
