Added banner image and links to my own web page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- LOGO SECTION -->
     <tr>
-        <td>
+        <td style="padding: 14px 0 4px;">
             <table width="100%">
 
                 <tr>
@@ -68,7 +68,7 @@
 
                       <table class="column">
                         <tr>
-                            <td>
+                            <td style="padding: 0 62px 10px">
                                 <a href="https://main--resilient-moonbeam-d97f1c.netlify.app/">
                                     <img src="img/modern.jpg" alt="Modern Logo"
                                     width="180" title="Modern Logo"></a>
@@ -78,7 +78,7 @@
 
                       <table class="column">
                         <tr>
-                            <td>
+                            <td style="padding: 10px 72px;">
                                 <a href="#"><img src="img/black-facebook.png" alt="" width="30px"></a>
                                 <a href="#"><img src="img/black-twitter.png" alt="" width="30px"></a>
                                 <a href="#"><img src="img/black-youtube.png" alt="" width="30px"></a>
@@ -97,6 +97,11 @@
 
 
 <!-- BANNER IMAGE -->
+ <tr>
+    <td>
+        <a href="#"><img src="img/banner.jpg"></a>
+    </td>
+ </tr>
 
 
 <!-- THREE COLUMN SECTION -->
@@ -118,7 +123,7 @@
 </html>
 
 <div style="position:absolute;bottom: 0;width: 100%;text-align: center;line-height: 40px;font-size: 25px;">
-	<a href="https://responsivehtmlemail.com/html-email-course/" target="_blank" style="color: #404577;text-decoration: none;">www.ResponsiveHTMLEmail.com</a>
+	<a href="https://main--resilient-moonbeam-d97f1c.netlify.app/" target="_blank" style="color: #404577;text-decoration: none;">React JS Portfolio Page</a>
 </div>
 
 
@@ -154,11 +159,11 @@
 						</div>
 						<div class="col-lg-5 my-2">
 							<!-- YOUTUBE CHANNEL -->
-							<a class="btn btn-lg" href="https://www.youtube.com/channel/UCZWoe3ezD_dZTZgQnDyBgFQ/?sub_confirmation=1" target="_blank" style="background-color: red;color: white;transition: transform .3s ease;"><i class="fab fa-youtube"></i> Subscribe
+							<a class="btn btn-lg" href="https://main--resilient-moonbeam-d97f1c.netlify.app/" target="_blank" style="background-color: red;color: white;transition: transform .3s ease;"><i class="fab fa-youtube"></i> Subscribe
 							</a>
 						</div>
 						<div class="col-12">
-							<h6 class="pt-4 pb-0"><a href="https://responsivehtmlemail.com/html-email-course/" target="_blank">www.responsivehtmlemail.com</a></h6>
+							<h6 class="pt-4 pb-0"><a href="https://main--resilient-moonbeam-d97f1c.netlify.app/" target="_blank">Viren Lala React JS page</a></h6>
 						</div>
 					</div>
 				</div>
