I've added links to my own sites and made changes to how you can interact with the page

--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
 				<div class="container-fluid text-center">
 					<div class="row justify-content-center px-0">
 						<div class="col-12">
-							<h2 class="pt-2 pb-4">Subscribe & turn on notifications! <i class="fas fa-bell"></i></h2>
+							<h2 class="pt-2 pb-4">React JS Portfolio</h2><p>Take a look at my other sites</p>
 						</div>
 						<div class="col-lg-5 my-2">
-							<!-- YOUTUBE CHANNEL -->
-							<a class="btn btn-lg" href="https://main--resilient-moonbeam-d97f1c.netlify.app/" target="_blank" style="background-color: red;color: white;transition: transform .3s ease;"><i class="fab fa-youtube"></i> Subscribe
+							<!-- Personal Portfolio -->
+							<a class="btn btn-lg" href="https://main--resilient-moonbeam-d97f1c.netlify.app/" target="_blank" style="background-color: red;color: white;transition: transform .3s ease;"><i class="fab fa-youtube"></i> HYPERDRIVE
 							</a>
 						</div>
 						<div class="col-12">
@@ -178,7 +178,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script>
-	$(this).delay(2000).queue(function() { /*-- CHANGE DELAY TIME --*/
+	$(this).delay(5000).queue(function() { /*-- I have changed the delay time--*/
 		$("#socialModal").modal('show');
 	});
 </script>
