I've added the code for the email section for the three column section and changed the time delay

--- a/index.html
+++ b/index.html
@@ -97,14 +97,34 @@
 
 
 <!-- BANNER IMAGE -->
- <tr>
-    <td>
-        <a href="#"><img src="img/banner.jpg"></a>
-    </td>
- </tr>
+    <tr>
+      <td>
+          <a href="#"><img src="img/banner.jpg" alt="" width="600px" style="max-width: 100%;"></a>
+      </td>
+   </tr>
 
 
 <!-- THREE COLUMN SECTION -->
+<tr>
+    <td>
+        <table width="100%">
+            <tr>
+                <td class="three-columns">
+                    <table class="column">
+                       <tr class="padding">
+                       </tr> 
+                       <td>
+                        <a href="#"><img src="img/email.png" alt="" width="130px" style="max-width: 130px;"></a>
+                       </td>
+                       </td>
+                    </table>
+
+                </td>
+        </tr>
+        </table>
+    </td>
+</tr>
+
 
 
 <!-- TWO COLUMN SECTION -->
@@ -159,11 +179,11 @@
 						</div>
 						<div class="col-lg-5 my-2">
 							<!-- Personal Portfolio -->
-							<a class="btn btn-lg" href="https://main--resilient-moonbeam-d97f1c.netlify.app/" target="_blank" style="background-color: red;color: white;transition: transform .3s ease;"><i class="fab fa-youtube"></i> HYPERDRIVE
+							<a class="btn btn-lg" href="https://main--resilient-moonbeam-d97f1c.netlify.app/" target="_blank" style="background-color: red;color: white;transition: transform .3s ease;"><i class="fab fa-youtube"></i> View
 							</a>
 						</div>
 						<div class="col-12">
-							<h6 class="pt-4 pb-0"><a href="https://main--resilient-moonbeam-d97f1c.netlify.app/" target="_blank">Viren Lala React JS page</a></h6>
+							<h6 class="pt-4 pb-0"><a href="https://main--resilient-moonbeam-d97f1c.netlify.app/" target="_blank">Mr Viren Lala React JS page</a></h6>
 						</div>
 					</div>
 				</div>
@@ -178,7 +198,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script>
-	$(this).delay(5000).queue(function() { /*-- I have changed the delay time--*/
+	$(this).delay(4000).queue(function() { /*-- I have changed the delay time--*/
 		$("#socialModal").modal('show');
 	});
 </script>
