Three column section html and css completed

--- a/index.html
+++ b/index.html
@@ -44,6 +44,27 @@
         max-width: 300px;
         display: inline-block;
         vertical-align: top;
+        text-align: center;
+    }
+    .three-columns {
+        text-align: center;
+        font-size: 0;
+        padding: 15px 0 25px;
+    }
+    .three-columns .column {
+        width: 100%;
+        max-width: 200px;
+        display: inline-block;
+        vertical-align: top;
+        text-align: center;
+    }
+    .three-columns .padding {
+        padding: 15px;
+    }
+    .three-columns .content {
+        font-size: 15px;
+        line-height: 20px;
+        padding: 0 15px;
     }
 
 </style>
@@ -112,12 +133,43 @@
                 <td class="three-columns">
                     <table class="column">
                        <tr class="padding">
-                       </tr> 
-                       <td>
-                        <a href="#"><img src="img/email.png" alt="" width="130px" style="max-width: 130px;"></a>
-                       </td>
-                       </td>
+                         <td>
+                          <a href="#"><img src="img/email.png" alt="" width="130px" style="max-width: 130px;"></a>
+                         </td>
+                       </tr>
+                       <tr>
+                        <td>
+                           <p class="content"style="font-weight: bold;font-size: 17px;">Ecommerce</p> 
+                           <p class="content">Responsive HTML Email Template</p>
+                        </td>
+                       </tr>
                     </table>
+                    <table class="column">
+                        <tr class="padding">
+                          <td>
+                           <a href="#"><img src="img/settings.png" alt="" width="130px" style="max-width: 130px;"></a>
+                          </td>
+                        </tr>
+                        <tr>
+                         <td>
+                            <p class="content"style="font-weight: bold;font-size: 17px;">Web Design</p> 
+                            <p class="content">Responsive HTML Email Template</p>
+                         </td>
+                        </tr>
+                     </table>
+                     <table class="column">
+                        <tr class="padding">
+                          <td>
+                           <a href="#"><img src="img/home.png" alt="" width="130px" style="max-width: 130px;"></a>
+                          </td>
+                        </tr>
+                        <tr>
+                         <td>
+                            <p class="content"style="font-weight: bold;font-size: 17px;">HTML Email</p> 
+                            <p class="content">Responsive HTML Email Template</p>
+                         </td>
+                        </tr>
+                     </table>
 
                 </td>
         </tr>
