--- a/index.html
+++ b/index.html
@@ -266,6 +266,28 @@
 
 
 <!-- FOOTER SECTION -->
+ <tr>
+    <td style= "background-color: #26292b;padding: 45px 20px;color: #ffffff">
+        <table width="100%">
+
+            <tr>
+                <td style="text-align: center;">
+
+                    <a href="#"><img src="img/modern-white.png" alt="" width="180px"></a>
+                    <p style="padding: 10px;">Mordern HTML Email</p>
+                    <p style="padding: 10px;">152 Street Road, City, B12 3AB</p>
+                    <a href="#"><img src="img/white-facebook.png" alt="" width="30px"></a>
+                    <a href="#"><img src="img/white-twitter.png" alt="" width="30px"></a>
+                    <a href="#"><img src="img/white-youtube.png" alt="" width="30px"></a>
+                    <a href="#"><img src="img/white-linkedin.png" alt="" width="30px"></a>
+                    <a href="#"><img src="img/white-instagram.png" alt="" width="30px"></a>
+                    <p style="padding: 10px;">SUBSCRIBE</p>
+
+                </td>
+            </tr>
+        </table>
+    </td>
+ </tr>
 
   </table> 
 
@@ -276,7 +298,7 @@
 
 <!--    <div style="position:absolute;bottom: 0;width: 100%;text-align: center;line-height: 40px;font-size: 25px;">
 	<a href="https://main--resilient-moonbeam-d97f1c.netlify.app/" target="_blank" style="color: #404577;text-decoration: none;">React JS Portfolio Page</a>
-</div>
+</div> -->
 
 
 
@@ -290,7 +312,7 @@
 		transform: scale(1.02);
 	}
 </style>
-<!-- Modal -->
+<!-- Modal Section -->
 <div class="modal fade" id="socialModal" style="font-family: 'Poppins', sans-serif;">
   <div class="modal-dialog modal-md" role="document">
     <div class="modal-content" style="background-color: rgba(255, 255, 255, .9)!important;border: 0;">
